--- a/resources/assets/scss/components/_subpages.scss
+++ b/resources/assets/scss/components/_subpages.scss
@@ -23,5 +23,15 @@ section {
             -webkit-box-shadow: 0 1px 5px 1px rgba(0, 0, 0, .1);
             box-shadow: 0 1px 5px 1px rgba(0, 0, 0, .1);
         }
+        &--events-detail {
+            .sub-banner:before,
+            .sub-banner__wrapper:before,
+            .sub-banner__image.image-background {
+                display: none;
+            }
+            .sub-banner {
+                height: 310px;
+            }
+        }
     }
 }
