--- a/resources/assets/scss/utilities/_colors.scss
+++ b/resources/assets/scss/utilities/_colors.scss
@@ -6,12 +6,12 @@ $color-navydark:#252a38;
 $color-darknavy:#1b1e25;
 $color-navy:#2a3040;
 $color-lightgray:#ddd;
-$color-lightgray2:#f0f0f0;
+$color-lightgray2:#d4d4d4;
 // BASIC
 $color-white:#fff;
 $color-black:#000;
 $color-gray:#b9b1b2;
-$color-gray2:#676767;
+$color-gray2:#7f7f7f;
 $color-primary:$color-dark;
 $color-secondary:$color-red;
 $color-third:$color-black;
