--- a/resources/assets/scss/utilities/_variables.scss
+++ b/resources/assets/scss/utilities/_variables.scss
@@ -3,5 +3,5 @@ $desktop-large:1350px;
 $desktop:1024px;
 $tablet:768px;
 $mobile:480px;
-
 $brush-circle:url('../images/banner-circle-brush.png');
+$sprite-all: url('../images/sprite.png') no-repeat;
