--- a/public/css/app.css
+++ b/public/css/app.css
@@ -19799,6 +19799,7 @@ section.chapters {
   width: 100%;
   height: 100%;
   min-height: 778px;
+  position: relative;
 }
 section.chapters h2 {
   position: relative;
@@ -19808,17 +19809,44 @@ section.chapters h2 {
   color: #fff;
   -webkit-transform: rotate(-90deg);
   transform: rotate(-90deg);
+  transition: all 0.5s ease;
 }
 section.chapters .map-content {
-  position: relative;
+  position: absolute;
   display: block;
   height: 100%;
-  min-height: 778px;
+  min-height: 753px;
+  top: 0;
+  left: 0;
 }
 section.chapters .btn-wrap {
   position: absolute;
   bottom: 85px;
   left: -125px;
+}
+section.chapters:hover h2 {
+  color: #fff;
+  text-shadow: 1px 2px 10px #000000;
+}
+section.chapters .map {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  left: 0;
+  top: 0;
+  background-color: #ab1a2d;
+  background: url("../images/map-cover.jpg") no-repeat;
+  background-size: cover;
+}
+section.chapters .map:hover iframe {
+  opacity: 1;
+  visibility: visible;
+}
+section.chapters .map iframe {
+  height: 100%;
+  opacity: 0;
+  visibility: hidden;
+  transition: all 0.5s ease;
 }
 section .feat-members .feat-members-slider {
   position: relative;
@@ -20000,12 +20028,25 @@ section .sponsors .sponsor-logo {
   position: absolute;
   top: -20px;
   right: 0;
-  width: 62%;
+  width: 70%;
   padding: 0 0 0 70px;
   z-index: 1;
   background: #f8f6f6;
   border-top-left-radius: 150px;
   border-bottom-left-radius: 150px;
+  height: 180px;
+}
+section .sponsors .sponsor-logo__slide {
+  height: 180px;
+  -webkit-transform: scale(1.2) translate(65px, 0);
+  transform: scale(1.2) translate(65px, 0);
+}
+section .sponsors .sponsor-logo__items {
+  height: 180px;
+  display: flex !important;
+  flex-wrap: wrap !important;
+  align-items: center;
+  justify-content: center;
 }
 
 .btn-group a {
@@ -20480,7 +20521,23 @@ ul.bullet-style li strong {
 .curl-tail-bottom {
   position: relative;
 }
-.curl-tail-bottom:after {
+
+.curl-tail-both {
+  position: relative;
+}
+.curl-tail-both:before {
+  content: "";
+  width: 100%;
+  height: 40px;
+  position: absolute;
+  left: 0;
+  top: 0;
+  background: url("../images/bottom-style-white.png");
+  z-index: 6;
+  -webkit-transform: rotate(180deg);
+          transform: rotate(180deg);
+}
+.curl-tail-both:after {
   width: 100%;
   height: 43px;
   content: "";
