--- a/resources/assets/scss/app.scss
+++ b/resources/assets/scss/app.scss
@@ -34,8 +34,8 @@
 @import "components/main-page";
 @import "components/subpages";
 @import "components/sliders";
-@import "pages/about";
-@import "pages/contact-us";
+@import "pages/pages-section";
 @import "browsers/safari-only";
 @import "browsers/firefox-only";
 @import "browsers/ie-only";
+@import "components/mobile-overwrite";
