--- a/resources/assets/scss/components/_subpages.scss
+++ b/resources/assets/scss/components/_subpages.scss
@@ -33,5 +33,10 @@ section {
                 height: 310px;
             }
         }
+        &--login {
+            .site-content {
+                margin: 200px 0;
+            }
+        }
     }
 }
