--- a/resources/assets/scss/app.scss
+++ b/resources/assets/scss/app.scss
@@ -35,6 +35,7 @@
 @import "components/subpages";
 @import "components/sliders";
 @import "pages/pages-section";
+@import "pages/dashboard";
 @import "browsers/safari-only";
 @import "browsers/firefox-only";
 @import "browsers/ie-only";
