--- a/public/css/app.css
+++ b/public/css/app.css
@@ -17667,6 +17667,7 @@ body {
   font-family: "Open Sans", sans-serif;
   background-size: cover;
   background-position: top center;
+  font-weight: 600;
 }
 
 ul.inline-block {
@@ -20951,6 +20952,172 @@ section.page--login .site-content {
     right: 0 !important;
     left: inherit !important;
   }
+}
+
+.dashboard-navigation {
+  background: #303132;
+}
+.dashboard-navigation .navbar-bar ul {
+  list-style: none;
+  padding: 0;
+}
+.dashboard-navigation .navbar-bar__wrapper {
+  display: flex !important;
+  flex-wrap: wrap !important;
+  align-items: center;
+  justify-content: center;
+  list-style: none;
+  padding: 0;
+}
+.dashboard-navigation .navbar-bar__wrapper li a {
+  color: #fff;
+  padding: 15px 30px;
+  text-transform: uppercase;
+  font-size: 0.9em;
+  position: relative;
+}
+.dashboard-navigation .navbar-bar__wrapper li .dropdown-menu {
+  margin: 0;
+  border: 0;
+  background: #ddd;
+}
+.dashboard-navigation .navbar-bar__wrapper li .dropdown-menu li a {
+  color: #303132;
+}
+.dashboard-navigation .navbar-bar__wrapper li.active a {
+  position: relative;
+}
+.dashboard-navigation .navbar-bar__wrapper li.active a:after {
+  content: "";
+  width: 0;
+  height: 0;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  margin: auto;
+  border-left: 10px solid transparent;
+  border-right: 10px solid transparent;
+  border-bottom: 12px solid #fff;
+}
+
+.page--dashboard .primary-heading {
+  display: block;
+  margin-bottom: 25px;
+}
+.page--dashboard .primary-heading h3 {
+  font-weight: bold;
+}
+
+.events-upcoming__content h4,
+.events-upcoming__content h5 {
+  font-weight: 800;
+}
+.events-upcoming__content h5 {
+  color: #ab1a2d;
+  margin-bottom: 10px;
+}
+.events-upcoming__description {
+  margin-bottom: 15px;
+}
+.events-upcoming__box {
+  border: 1px solid #b9b1b2;
+  padding: 30px 80px;
+  border-radius: 5px;
+  margin: auto;
+  margin-bottom: 50px;
+}
+.events-upcoming__box a.btn {
+  padding: 0 !important;
+  background: transparent;
+  border: none;
+  color: #000;
+  font-weight: 600;
+  font-size: 1em;
+  display: inline-block;
+  min-width: inherit !important;
+}
+.events-upcoming__box a.btn i {
+  transition: all 0.5s ease;
+}
+.events-upcoming__box a.btn:hover {
+  color: #ab1a2d;
+}
+.events-upcoming__box a.btn:hover i {
+  transform: translate(10px, 0);
+  -moz-transform: translate(10px, 0);
+  -webkit-transform: translate(10px, 0);
+  -o-transform: translate(10px, 0);
+}
+
+.attended-events {
+  margin-bottom: 60px;
+}
+.attended-events__content ul, .attended-events__label ul {
+  display: flex !important;
+  flex-wrap: wrap !important;
+  align-items: center;
+  list-style: none;
+}
+.attended-events__content ul li, .attended-events__label ul li {
+  padding: 10px 20px;
+}
+.attended-events__item {
+  border-radius: 5px;
+  border: 1px solid #ddd;
+  padding: 10px 0;
+  margin-bottom: 15px;
+}
+.attended-events__item ul {
+  margin: 0;
+  padding: 0;
+}
+.attended-events__label {
+  border-bottom: 1px solid #ddd;
+  margin-bottom: 20px;
+}
+.attended-events__label ul {
+  margin: 0;
+  padding: 0;
+}
+.attended-events__content label {
+  font-size: 0.7em;
+  font-weight: bold;
+  text-transform: uppercase;
+  width: 100%;
+  display: none;
+}
+.attended-events__title {
+  max-width: 60%;
+  flex: 0 0 60%;
+}
+.attended-events__title h3 {
+  font-size: 1.1em;
+  font-weight: 800;
+  margin: 0;
+}
+.attended-events__date {
+  max-width: 13.33%;
+  flex: 0 0 13.33%;
+}
+.attended-events__action {
+  max-width: 13.33%;
+  flex: 0 0 13.33%;
+}
+.attended-events__action a {
+  font-weight: bold;
+  color: #303132;
+  text-decoration: none;
+}
+.attended-events__action a i {
+  position: relative;
+  top: -2px;
+  color: #b9b1b2;
+}
+
+.dashboard-content__events .container-max {
+  max-width: 1250px;
+  margin: 50px auto;
 }
 
 /* Safari 11+ */
